--- a/cascad/server/templates/compute_experiment.html
+++ b/cascad/server/templates/compute_experiment.html
@@ -38,7 +38,7 @@
                                 <td>{{ experiment.modified_date }}</td>
                                 <td>{{ experiment.status }}</td>
                                 <td>
-                                    <form action="/config_experiment" method="post">
+                                    <form action="/dashapp/exp1" method="get">
                                         <button class="btn btn-primary" type="submit" value="Send Email" style="width: 100%;height:100%">
                                             View
                                             </button>
