--- a/cascad/server/templates/base.html
+++ b/cascad/server/templates/base.html
@@ -100,10 +100,24 @@
                         </a>
                     </li>
 
+                    <li class="active">
+                        <a class="" href="/components">
+                            <i class="icon_house_alt"></i>
+                            <span>智能组件管理</span>
+                        </a>
+                    </li>
+
                     <li>
                         <a class="" href="/compute_experiment">
                             <i class="icon_genius"></i>
                             <span>计算实验</span>
+                        </a>
+                    </li>
+
+                    <li class="active">
+                        <a class="" href="/examples">
+                            <i class="icon_house_alt"></i>
+                            <span>行业应用案例</span>
                         </a>
                     </li>
 
