--- a/cascad/server/templates/agent bak.html
+++ b/cascad/server/templates/agent bak.html
@@ -16,37 +16,25 @@
             <div class="row">
 
                 {% for agent in agents %}
-                <div class="col-md-4 mb-4">
-                    <div class="card text-white bg-primary h-100">
-                        <div class="card-body d-flex flex-column justify-content-between">
-                            <h5 class="card-title"><b>{{agent.agent_name}}</b></h5>
-                            <a href="/agents/{{agent.agent_name}}" class="btn btn-light mt-2">Agent Details</a>
+                <div class="col-md-3 border border-secondary">
+                    <div class="card bg-primary text-white text-center" style="width: 18rem; height:10rem;border: solid 1px green;">
+                        <div class="card-body">
+                            <h5 class="card-title"> <b>{{agent.agent_name}} </b></h5>
+                            <a href="/agents/{{agent.agent_name}}" class="card-link">Agent Details</a>
                         </div>
                     </div>
                 </div>
+
                 {% endfor %}
             </div>
-        </div>
+
     </section>
+    </div>
+
 </div>
 
-{% endblock %} {% block scripts %}
-<style>
-    .card {
-        width: 18rem;
-        border: solid 1px green;
-        border-radius: 5px;
-    }
-    
-    .btn-light {
-        color: #007BFF;
-    }
-    
-    .btn-light:hover {
-        color: #0056B3;
-        background-color: #F8F9FA;
-    }
-</style>
+{% endblock %}
+
 <script>
     function post(path, params, method = 'post') {
         const form = document.createElement('form');
@@ -68,4 +56,3 @@
         form.submit();
     }
 </script>
-{% endblock %}
