--- a/cascad/server/templates/components.html
+++ b/cascad/server/templates/components.html
@@ -17,12 +17,12 @@
 
                 {% set components = [{'name': 'LMSR', 'description': 'Logarithmic Market Scoring Rule'}, {'name': 'FPMM', 'description': 'Fixed Product Market Maker'}, {'name': 'RelativeMajority Voting', 'description': 'Relative Majority Voting Method'}] %} {% for component
                 in components %}
-                <div class="col-md-4 border border-secondary">
-                    <div class="card bg-primary text-white text-center" style="width: 18rem; height:10rem;border: solid 1px green;">
-                        <div class="card-body">
-                            <h5 class="card-title"> <b>{{component.name}} </b></h5>
+                <div class="col-md-4 mb-4 d-flex">
+                    <div class="card text-white bg-primary w-100 component-card">
+                        <div class="card-body d-flex flex-column justify-content-between">
+                            <h5 class="card-title"><b>{{component.name}}</b></h5>
                             <p class="card-text">{{component.description}}</p>
-                            <a href="/components/{{component.name}}" class="card-link">Component Details</a>
+                            <a href="/components/{{component.name}}" class="btn btn-light mt-2">Component Details</a>
                         </div>
                     </div>
                 </div>
@@ -33,4 +33,22 @@
     </section>
 </div>
 
+{% endblock %} {% block scripts %}
+<style>
+    .component-card {
+        width: 18rem;
+        border: solid 1px green;
+        border-radius: 5px;
+        margin: 0 auto;
+    }
+    
+    .btn-light {
+        color: #007BFF;
+    }
+    
+    .btn-light:hover {
+        color: #0056B3;
+        background-color: #F8F9FA;
+    }
+</style>
 {% endblock %}
