--- a/cascad/server/templates/base.html
+++ b/cascad/server/templates/base.html
@@ -96,14 +96,14 @@
                     <li class="active">
                         <a class="" href="/agents">
                             <i class="icon_house_alt"></i>
-                            <span>智能体管理</span>
+                            <span>智能体</span>
                         </a>
                     </li>
 
                     <li class="active">
                         <a class="" href="/components">
                             <i class="icon_house_alt"></i>
-                            <span>智能组件管理</span>
+                            <span>智能组件</span>
                         </a>
                     </li>
 
