add chain explorer

--- a/cascad/server/templates/base.html
+++ b/cascad/server/templates/base.html
@@ -121,6 +121,14 @@
                         </a>
                     </li>
 
+                    <li class="active">
+                        <a class="" href="/chain">
+                            <i class="icon_house_alt"></i>
+                            <span>平行区块链</span>
+                        </a>
+                    </li>
+
+
                 </ul>
                 <!-- sidebar menu end-->
             </div>
