--- a/cascad/server/static/css/style.css
+++ b/cascad/server/static/css/style.css
@@ -491,7 +491,13 @@ ul.sidebar-menu li.active a i {
     margin-left: 180px;
 }
 
+#login-content{
+    margin-left: 40%;
+    margin-right: 40%;
+}
+
 .header, .footer {
+    margin-top: 0px;
     min-height: 60px;
     padding: 0 15px;
 }
@@ -523,6 +529,12 @@ ul.sidebar-menu li.active a i {
 .wrapper {
     display: inline-block;
     margin-top: 60px;
+    padding: 15px;
+    width: 100%;
+}
+.wrapper-login{
+    display: inline-block;
+    margin-top: 300px;
     padding: 15px;
     width: 100%;
 }
