--- a/cascad/server/templates/app.html
+++ b/cascad/server/templates/app.html
@@ -31,6 +31,15 @@
                         </div>
                     </div>
                 </div>
+                 <div class="col-md-4 mb-4 d-flex">
+                    <div class="card text-white bg-primary w-100 app-card">
+                        <div class="card-body d-flex flex-column justify-content-between">
+                            <h5 class="card-title"><b>DeSci DAO</b></h5>
+                            <a href="https://101.35.235.176/" class="btn btn-light mt-2">App Details</a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
