--- a/cascad/server/templates/login.html
+++ b/cascad/server/templates/login.html
@@ -47,8 +47,6 @@
     <!--Footable CSS-->
     <link href="/static/css/footable.bootstrap.min.css" rel="stylesheet">
 
-
-
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
@@ -62,7 +60,7 @@
 </head>
 
 <body>
-    <section id="container" class="">
+        <section id="container" class="">
         <header class="header dark-bg">
             <div class="toggle-nav">
                 <div class="icon-reorder tooltips" data-original-title="隐藏/显示侧栏" data-placement="bottom">
@@ -71,7 +69,7 @@
             </div>
 
             <!--logo start-->
-            <a href="/" class="logo"> 计算机辅助动态设计复杂自适应系统</a>
+            <a href="/" class="logo"> 计算机辅助动态设计复杂自适应系统 </a>
             <!--logo end-->
 
 
@@ -79,55 +77,42 @@
                 <!-- notificatoin dropdown start-->
                 <ul class="nav pull-right top-menu">
                     <li>
-                        <a href='https://colony.denovel.cn'>
-                            <i class="fa fa-github" aria-hidden="true"> 打开治理平台</i>
+                        <a href='https://github.com/Will-Holden/cascadv2'>
+                            <i class="fa fa-github" aria-hidden="true"> open Github</i>
                         </a>
-                    </li>
+                    </li> 
                 </ul>
             </div>
         </header>
         <!--header end-->
-
-        <!--sidebar start-->
-        <aside>
-            <div id="sidebar" class="nav-collapse ">
-                <!-- sidebar menu start-->
-                <ul class="sidebar-menu">
-                    <li>
-                        <a class="" href="/agents">
-                            <i class="icon_house_alt"></i>
-                            <span>智能体</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a class="" href="/compute_experiment">
-                            <i class="icon_genius"></i>
-                            <span>计算实验</span>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a class="" href="/examples">
-                            <i class="icon_house_alt"></i>
-                            <span>行业应用案例</span>
-                        </a>
-                    </li>
-                </ul>
-                <!-- sidebar menu end-->
-            </div>
-        </aside>
-        <!--sidebar end-->
-        <!--main content start-->
-        <section id="main-content">
-            <section class="wrapper">
-
-                {% block mainbody %}
-                <p>original page</p>
-                {% endblock %}
-
+       <section id="login-content" class="">
+            {% for msg in get_flashed_messages() %}
+            <div class="alert alert-{{ msg.category }}">{{ msg }}</div>
+            {% endfor %}
+            <section class="wrapper-login">
+             <div class="card bg-light">
+                <div class="login-content">
+                    <form class="form-horizontal form-material" id="loginform" method="POST" action="{{ url_for('auth_bp.login_post')}}">
+                        <div class="form-group m-t-40">
+                            <div class="col-xs-12">
+                                <input class="form-control" type="text" name="username" required="" placeholder="用户名">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <div class="col-xs-12">
+                                <input class="form-control" type="password" name="password" required="" placeholder="密码"> 
+                            </div>
+                        </div>
+                        <div class="form-group text-center m-t-20">
+                            <div class="col-xs-12">
+                                <button class="btn btn-info btn-lg btn-block text-uppercase waves-effect waves-light" type="submit">登录</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                </div>
             </section>
         </section>
-    </section>
 
     <!-- javascripts -->
     <script src="/static/js/jquery-1.8.3.min.js"></script>
